update book introductions to support new pdf styles

--- a/modules/administration/pages/admin-overview.adoc
+++ b/modules/administration/pages/admin-overview.adoc
@@ -1,18 +1,23 @@
 ifndef::backend-pdf[]
 [[admin-overview]]
-= Administration Guide: SUSE {productname} {productnumber}
-
-This guide covers administration tasks like maintaining, monitoring, and customizing a {productname} Server.
+= Administration Guide
 
 // HTML Publication date 
 **Publication Date:** {docdate}
 
-// HTML Copyright
+== Preface
 
-Copyright © 2006–2025 SUSE LLC and contributors. All rights reserved.
+This guide covers administration tasks like maintaining, monitoring, and customizing a {productname} Server.
+
+== Copyright Notice
+
+// HTML Copyright
+Copyright © {copyrightdate} SUSE LLC and contributors. All rights reserved.
 Permission is granted to copy, distribute and/or modify this document under the terms of the GNU Free Documentation License, Version 1.2 or (at your option) version 1.3; with the Invariant Section being this copyright
-notice and license. A copy of the license version 1.2 is included in the section entitled “GNU Free Documentation
-License”.
+notice and license. A copy of the license version 1.2 is included in the section entitled xref:legal:license.adoc[GNU Free Documentation License].
+
+== Trademarks
+// HTML Trademarks
 For SUSE trademarks, see https://www.suse.com/company/legal/ . All third-party trademarks are the property
 of their respective owners. Trademark symbols (®, ™ etc.) denote trademarks of SUSE and its affiliates. Asterisks
 (*) denote third-party trademarks.
@@ -59,13 +64,12 @@ This guide covers administration tasks like maintaining, monitoring, and customi
 {nbsp} +
 {nbsp} +
 
-
 // PDF Copyright
-
-Copyright © 2006–2025 SUSE LLC and contributors. All rights reserved.
+Copyright © {copyrightdate} SUSE LLC and contributors. All rights reserved.
 Permission is granted to copy, distribute and/or modify this document under the terms of the GNU Free Documentation License, Version 1.2 or (at your option) version 1.3; with the Invariant Section being this copyright
-notice and license. A copy of the license version 1.2 is included in the section entitled “GNU Free Documentation
-License”.
+notice and license. A copy of the license version 1.2 is included in the section entitled xref:legal:license.adoc[GNU Free Documentation License].
+
+// PDF Trademarks
 For SUSE trademarks, see https://www.suse.com/company/legal/ . All third-party trademarks are the property
 of their respective owners. Trademark symbols (®, ™ etc.) denote trademarks of SUSE and its affiliates. Asterisks
 (*) denote third-party trademarks.
@@ -74,6 +78,5 @@ guarantee complete accuracy. Neither SUSE LLC, its affiliates, the authors nor t
 for possible errors or the consequences thereof.
 
 <<<
-
 
 endif::[]
