--- a/modules/common-workflows/pages/common-workflows-overview.adoc
+++ b/modules/common-workflows/pages/common-workflows-overview.adoc
@@ -1,13 +1,91 @@
+ifndef::backend-pdf[]
 [[common-workflows-overview]]
-= Common workflows overview
+= Common workflows
 
-**Updated:** {docdate}
+// HTML Publication date 
+**Publication Date:** {docdate}
 
-The {productname} Common Workflows Guide covers most commonly used workflows you need to install, manage, and configure your clients with {productname}.
+== Preface
 
-Each workflow in this book has a clear goal, and provides detailed steps to achieve that goal.
+The {productname} Common Workflows Guide provides step-by-step instructions for the most frequently used workflows to install, manage, and configure clients with {productname}.
 
-It is designed to help you better understand both routine and advanced tasks, by explaining what you are achieving in each step, and the various options available to you along the way.
+Each workflow in this guide has a clear objective and includes detailed steps to help you achieve it efficiently.
 
-//Each routine will be decribed as xref:snippets:recipe1.adoc[]. (THIS IS UNDER CONSTRUCTION.)
-Each routine will be decribed as Workflow.
+Designed for both routine and advanced tasks, this guide not only explains the actions you take but also highlights the available options at each stage.
+
+Throughout this guide, each routine task is referred to as a Workflow.
+
+== Copyright Notice
+
+// HTML Copyright
+Copyright © {copyrightdate} SUSE LLC and contributors. All rights reserved.
+Permission is granted to copy, distribute and/or modify this document under the terms of the GNU Free Documentation License, Version 1.2 or (at your option) version 1.3; with the Invariant Section being this copyright
+notice and license. A copy of the license version 1.2 is included in the section entitled xref:legal:license.adoc[GNU Free Documentation License].
+
+== Trademarks
+// HTML Trademarks
+For SUSE trademarks, see https://www.suse.com/company/legal/ . All third-party trademarks are the property
+of their respective owners. Trademark symbols (®, ™ etc.) denote trademarks of SUSE and its affiliates. Asterisks
+(*) denote third-party trademarks.
+All information found in this book has been compiled with utmost attention to detail. However, this does not
+guarantee complete accuracy. Neither SUSE LLC, its affiliates, the authors nor the translators shall be held liable
+for possible errors or the consequences thereof.
+endif::[]
+
+// PDF PREFACE PAGE
+ifdef::backend-pdf[]
+
+<<<
+
+== Preface
+
+Common Workflows +
+{productname} {productnumber}
+
+The {productname} Common Workflows Guide provides step-by-step instructions for the most frequently used workflows to install, manage, and configure clients with {productname}.
+
+Each workflow in this guide has a clear objective and includes detailed steps to help you achieve it efficiently.
+
+Designed for both routine and advanced tasks, this guide not only explains the actions you take but also highlights the available options at each stage.
+
+Throughout this guide, each routine task is referred to as a Workflow.
+
+// PDF Publication
+
+**Publication Date:** {docdate}
+
+// PDF Copyright Space
+
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+
+// PDF Copyright
+Copyright © 2006–2025 SUSE LLC and contributors. All rights reserved.
+Permission is granted to copy, distribute and/or modify this document under the terms of the GNU Free Documentation License, Version 1.2 or (at your option) version 1.3; with the Invariant Section being this copyright
+notice and license. A copy of the license version 1.2 is included in the section entitled xref:legal:license.adoc[GNU Free Documentation License].
+
+// PDF Trademarks
+For SUSE trademarks, see https://www.suse.com/company/legal/ . All third-party trademarks are the property
+of their respective owners. Trademark symbols (®, ™ etc.) denote trademarks of SUSE and its affiliates. Asterisks
+(*) denote third-party trademarks.
+All information found in this book has been compiled with utmost attention to detail. However, this does not
+guarantee complete accuracy. Neither SUSE LLC, its affiliates, the authors nor the translators shall be held liable
+for possible errors or the consequences thereof.
+
+<<<
+
+endif::[]
