--- a/modules/legal/nav-legal-guide.adoc
+++ b/modules/legal/nav-legal-guide.adoc
@@ -2,13 +2,18 @@
 ifdef::backend-pdf[]
 = [.title]#{productname} {productnumber}#: Legal
 include::./branding/pdf/entities.adoc[]
-:toclevels: 2
 :doctype: book
+:title-page:
+:preface-title: Preface
+:toc: preamble
+:toc-title: Contents
+:toclevels: 2
 endif::[]
 
 * Legal
-** xref:license.adoc[License]
+** xref:license.adoc[GNU Free Documentation License]
 
 ifeval::[{mlm-content} == true]
 ** xref:copyright.adoc[Copyright Notice]
+** xref:trademarks.adoc[Trademarks]
 endif::[]
