--- a/modules/reference/nav-reference-guide.adoc
+++ b/modules/reference/nav-reference-guide.adoc
@@ -2,8 +2,12 @@
 ifdef::backend-pdf[]
 = [.title]#{productname} {productnumber}#: Reference Guide
 include::./branding/pdf/entities.adoc[]
-:toclevels: 4
 :doctype: book
+:title-page:
+:preface-title: Preface
+:toc: preamble
+:toc-title: Contents
+:toclevels: 4
 endif::[]
 
 
