--- a/modules/retail/nav-retail-guide.adoc
+++ b/modules/retail/nav-retail-guide.adoc
@@ -2,8 +2,12 @@
 ifdef::backend-pdf[]
 = [.title]#{productname} {productnumber}#: Retail Guide
 include::./branding/pdf/entities.adoc[]
-:toclevels: 2
 :doctype: book
+:title-page:
+:preface-title: Preface
+:toc: preamble
+:toc-title: Contents
+:toclevels: 3
 endif::[]
 
 
