--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -2,9 +2,12 @@
 ifdef::backend-pdf[]
 = [.title]#{productname} {productnumber}#: Client Configuration Guide
 include::./branding/pdf/entities.adoc[]
-:toc: left
-:toclevels: 4
 :doctype: book
+:title-page:
+:preface-title: Preface
+:toc: preamble
+:toc-title: Contents
+:toclevels: 4
 endif::[]
 
 
