--- a/modules/installation-and-upgrade/pages/installation-and-upgrade-overview.adoc
+++ b/modules/installation-and-upgrade/pages/installation-and-upgrade-overview.adoc
@@ -1,20 +1,96 @@
-= Installation, Deployment and Upgrade Guide Overview
+ifndef::backend-pdf[]
+[[installation-and-upgrade-overview]]
+= Installation, Deployment and Upgrade
 
-**Updated:** {docdate}
+// HTML Publication date 
+**Publication Date:** {docdate}
 
+== Preface 
 
-This book provides guidance on deploying and upgrading {productname} Server and Proxy.
+This guide provides comprehensive, step-by-step instructions for deploying, upgrading, and managing {productname} Server and Proxy.
 
-It is split into the following sections:
+It is organized into the following sections:
 
-Requirements::
-Describes hardware, software, and networking requirements before you begin.
+* **Requirements:** Outlines the essential hardware, software, and networking prerequisites to ensure a smooth setup.
+* **Deployment and Installation:** Guides you through deploying {productname} as a container and completing the initial configuration.
+* **Upgrade and Migration:** Details the process for upgrading and migrating {productname} while minimizing downtime.
+* **Basic Server Management:** Covers fundamental server operations, helping you get started with {productname} efficiently. 
 
-Deployment and Installation::
-Describes tasks for deploying {productname} as a container and initial setup.
+== Copyright Notice
 
-Upgrade and Migration::
-Describes upgrade and migration of {productname}.
+// HTML Copyright
+Copyright © {copyrightdate} SUSE LLC and contributors. All rights reserved.
+Permission is granted to copy, distribute and/or modify this document under the terms of the GNU Free Documentation License, Version 1.2 or (at your option) version 1.3; with the Invariant Section being this copyright
+notice and license. A copy of the license version 1.2 is included in the section entitled xref:legal:license.adoc[GNU Free Documentation License].
 
-Basic Server Management::
-Describes basic operations to start using the {productname}.
+== Trademarks
+// HTML Trademarks
+For SUSE trademarks, see https://www.suse.com/company/legal/ . All third-party trademarks are the property
+of their respective owners. Trademark symbols (®, ™ etc.) denote trademarks of SUSE and its affiliates. Asterisks
+(*) denote third-party trademarks.
+All information found in this book has been compiled with utmost attention to detail. However, this does not
+guarantee complete accuracy. Neither SUSE LLC, its affiliates, the authors nor the translators shall be held liable
+for possible errors or the consequences thereof.
+endif::[]
+
+ifdef::backend-pdf[]
+
+<<<
+
+== Preface
+
+Installation, Deployment and Upgrade +
+{productname} {productnumber}
+
+This guide provides comprehensive, step-by-step instructions for deploying, upgrading, and managing {productname} Server and Proxy.
+
+It is organized into the following sections:
+
+* **Requirements:** Outlines the essential hardware, software, and networking prerequisites to ensure a smooth setup.
+* **Deployment and Installation:** Guides you through deploying {productname} as a container and completing the initial configuration.
+* **Upgrade and Migration:** Details the process for upgrading and migrating {productname} while minimizing downtime.
+* **Basic Server Management:** Covers fundamental server operations, helping you get started with {productname} efficiently. 
+
+// PDF Publication
+
+**Publication Date:** {docdate}
+
+// PDF Copyright Space
+
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+
+// PDF Copyright
+Copyright © {copyrightdate} SUSE LLC and contributors. All rights reserved.
+Permission is granted to copy, distribute and/or modify this document under the terms of the GNU Free Documentation License, Version 1.2 or (at your option) version 1.3; with the Invariant Section being this copyright
+notice and license. A copy of the license version 1.2 is included in the section entitled xref:legal:license.adoc[GNU Free Documentation License].
+
+// PDF Trademarks
+For SUSE trademarks, see https://www.suse.com/company/legal/ . All third-party trademarks are the property
+of their respective owners. Trademark symbols (®, ™ etc.) denote trademarks of SUSE and its affiliates. Asterisks
+(*) denote third-party trademarks.
+All information found in this book has been compiled with utmost attention to detail. However, this does not
+guarantee complete accuracy. Neither SUSE LLC, its affiliates, the authors nor the translators shall be held liable
+for possible errors or the consequences thereof.
+
+<<<
+
+endif::[]
