--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -2,8 +2,12 @@
 ifdef::backend-pdf[]
 = [.title]#{productname} {productnumber}#: Specialized Guides
 include::./branding/pdf/entities.adoc[]
-:toclevels: 3
 :doctype: book
+:title-page:
+:preface-title: Preface
+:toc: preamble
+:toc-title: Contents
+:toclevels: 5
 endif::[]
 
 
