--- a/modules/retail/pages/retail-overview.adoc
+++ b/modules/retail/pages/retail-overview.adoc
@@ -7,12 +7,14 @@ ifndef::backend-pdf[]
 
 == Preface
 
-{productname} {smr} {productnumber} is an **open-source infrastructure management solution**, specifically **optimized for the retail industry**. Built on the same technology as {productname}, it has been tailored to meet the unique operational needs of retail organizations.  
+{productname} {smr} {productnumber} is an **open-source infrastructure management solution**, specifically **optimized for the retail industry**. 
+Built on the same technology as {productname}, it has been tailored to meet the unique operational needs of retail organizations.  
 
-Designed for **retail environments**, {productname} {smr} supports **point-of-service (POS) terminals**, allowing businesses to manage transactions, promotions, and customer loyalty programs. Beyond retail, it can also be used in **educational institutions** to maintain student computers, as well as in **banks and hospitals** for self-service kiosks.  
+Designed for **retail environments**, {productname} {smr} supports **point-of-service (POS) terminals**, allowing businesses to manage transactions, promotions, and customer loyalty programs. 
+Beyond retail, it can also be used in **educational institutions** to maintain student computers, as well as in **banks and hospitals** for self-service kiosks.  
 
-{productname} {smr} is suited for deployments that include **servers, workstations, point-of-service terminals, and other connected devices**. It enables administrators to **install, configure, and update software across their infrastructure**, while streamlining **deployment and provisioning** of POS machines.  
-
+{productname} {smr} is suited for deployments that include **servers, workstations, point-of-service terminals, and other connected devices**. 
+It enables administrators to **install, configure, and update software across their infrastructure**, while streamlining **deployment and provisioning** of POS machines.  
 
 This guide provides a **comprehensive overview** of {productname} {smr}, covering its **initial installation and setup**.  
 
@@ -24,7 +26,7 @@ ifeval::[{uyuni-content} == true]
 For additional guidance, refer to the **{productname} documentation suite** at https://www.uyuni-project.org/uyuni-docs.  
 endif::[]  
 
-For more details on managing your {productname} {smr} environment or seeking assistance, see xref:retail:retail-next.adoc[].  
+For more details on managing your {productname} {smr} environment or seeking assistance, see xref:retail:retail-next.adoc[]  
 
 
 == Copyright Notice
@@ -54,12 +56,14 @@ ifdef::backend-pdf[]
 Retail +
 {productname} {productnumber}
 
-{productname} {smr} {productnumber} is an **open-source infrastructure management solution**, specifically **optimized for the retail industry**. Built on the same technology as {productname}, it has been tailored to meet the unique operational needs of retail organizations.  
+{productname} {smr} {productnumber} is an **open-source infrastructure management solution**, specifically **optimized for the retail industry**. 
+Built on the same technology as {productname}, it has been tailored to meet the unique operational needs of retail organizations.  
 
-Designed for **retail environments**, {productname} {smr} supports **point-of-service (POS) terminals**, allowing businesses to manage transactions, promotions, and customer loyalty programs. Beyond retail, it can also be used in **educational institutions** to maintain student computers, as well as in **banks and hospitals** for self-service kiosks.  
+Designed for **retail environments**, {productname} {smr} supports **point-of-service (POS) terminals**, allowing businesses to manage transactions, promotions, and customer loyalty programs. 
+Beyond retail, it can also be used in **educational institutions** to maintain student computers, as well as in **banks and hospitals** for self-service kiosks.  
 
-{productname} {smr} is suited for deployments that include **servers, workstations, point-of-service terminals, and other connected devices**. It enables administrators to **install, configure, and update software across their infrastructure**, while streamlining **deployment and provisioning** of POS machines.  
-
+{productname} {smr} is suited for deployments that include **servers, workstations, point-of-service terminals, and other connected devices**. 
+It enables administrators to **install, configure, and update software across their infrastructure**, while streamlining **deployment and provisioning** of POS machines.  
 
 This guide provides a **comprehensive overview** of {productname} {smr}, covering its **initial installation and setup**.  
 
