Adjust the supported migration paths to Liberty Linux (#3754)
* Remove the Rocky/Alma reference when it comes to migration to liberty
* Update modules/specialized-guides/pages/salt/salt-formula-liberate.adoc
Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -2,8 +2,8 @@
 = Product Migration
 
 Product migration allows you to upgrade SLE-based client systems from an Service Pack (SP) level to a later one.
-You can also upgrade clients such as {almalinux}, {centos}, {oracle}, or {rocky} to {sll}.
 For example, you can migrate {sles}{nbsp}15{nbsp}SP1 to {sles}{nbsp}15{nbsp}SP2.
+You can also upgrade clients such as {rhel} or {centos} to {sll}.
 
 [IMPORTANT]
 ====
