--- a/modules/specialized-guides/pages/salt/salt-formula-liberate.adoc
+++ b/modules/specialized-guides/pages/salt/salt-formula-liberate.adoc
@@ -3,7 +3,7 @@
 [[liberate-formula]]
 = Liberate Formula
 
-The liberate formula migrates systems from EL clients such as {almalinux}, {centos} 7, {oracle} 9, {rocky} 9, or even {rhel} 9 to {sll}.
+The liberate formula migrates systems from EL clients such as {centos} 7 or {rhel} 9 to {sll}.
 With this formula the conversion will take place during the client onboarding on {productname}.
 
 
