Revert "4.3 - Revert to old admonition."
This reverts commit fdc7a94fa31acf9088553d8426ee752cfb82839b.

--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -25,7 +25,11 @@ Supported client operating systems are listed in this table. The icons in the ta
 
 [IMPORTANT]
 ====
-The operating system running on a client is supported by the organization that supplies the operating system.
+The {productname} supports multiple major versions of non-SUSE client operating systems.
+However, only the latest minor release of each supported major version is fully supported.
+
+Older minor releases might still work, but will only be supported on a limited and reasonable-effort basis. 
+If issues arise on an outdated minor release, users will be asked to upgrade to the latest available minor version before further support is provided.
 ====
 
 [[mgr.support.clients]]
