--- a/modules/administration/pages/troubleshooting/tshoot-container-full-disk.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-container-full-disk.adoc
@@ -31,13 +31,7 @@ Run all listed commands as [literal]``root`` on the container host.
 . Increase the disk size.
   Actions to take depend on the installation scenario.
 
-. If there is a partition and
-
-+
-
-** modified later on, skip this step.
-
-** it was initially created with [command]``mgr-storage-server`` or [command]``mgr-storage-proxy``, and not modified later on, ensure the partition uses all available space.
+. If the disk is partitioned (for example, there is a [path]``/dev/vdb1`` for disk [path]``/dev/vdb``), run the following commands:
 
 +
 
