containerize fallout: run parted on host OS in Admin tshoot (#3752)
* https://bugzilla.suse.com/show_bug.cgi?id=1237535
* https://github.com/SUSE/spacewalk/issues/26575
* Update modules/administration/pages/troubleshooting/tshoot-container-full-disk.adoc
Co-authored-by: Ondřej Holeček <oholecek@suse.com>

--- a/modules/administration/pages/troubleshooting/tshoot-container-full-disk.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-container-full-disk.adoc
@@ -24,24 +24,36 @@ If more detailed instructions are required, put them in a "Resolving" procedure:
 In case a dedicated disk mounted as a persistent storage medium of a container runs out of storage space, an emergency action is needed.
 
 Proceed as follows to solve the problem with resizing the storage medium.
+Run all listed commands as [literal]``root`` on the container host.
 
 .Procedure: Resize Storage Medium
 
-. Increase the disk (for example, [path]``/dev/vdb``) size.
-  For example, if the disk is a QCOW2 image, use the command [command]``qemu-img resize``.
+. Increase the disk size.
+  Actions to take depend on the installation scenario.
 
-. Ensure the partition uses all available space:
-* open a shell in the container using [command]``mgrctl term``.
-* [command]``sudo parted /dev/vdb``
-* [literal]``(parted)`` [command]``print``
-* [literal]``(parted)`` [command]``resizepart NUMBER 100%`` where [literal]``NUMBER`` is the partition number shown by [command]``print`` command (for example, [literal]``1`` if [literal]``/dev/vdb1``)
-* [literal]``(parted)`` [command]``quit``
-. Resize the filesystem.
-  For example, for an XFS filesystem run in a shell inside the container:
+. If the disk is partitioned (for example, there is a [path]``/dev/vdb1`` for disk [path]``/dev/vdb``), run the following commands:
+
 +
 
+Run the following commands:
+
++
+
+--
+.. [command]``parted /dev/vdb``
+.. [literal]``(parted)`` [command]``print``
+.. [literal]``(parted)`` [command]``resizepart NUMBER 100%`` where [literal]``NUMBER`` is the partition number shown by [command]``print`` command (for example, [literal]``1`` if [literal]``/dev/vdb1``)
+.. [literal]``(parted)`` [command]``quit``
+--
+
+. Resize the filesystem.
+  For example, for an XFS filesystem, run the command:
+
++
+
+[source,shell]
 ----
-sudo xfs_growfs /dev/vdb1
+xfs_growfs /dev/vdb1
 ----
 
-After completing the procedure, an XFS filesystem on [literal]``/dev/vdb1`` should be using all space available on the disk.
+After completing the procedure, an XFS filesystem should be using all space available on the disk.
