Clearer pointer to supported 3rd party features - Ubuntu.

--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -7,9 +7,9 @@ ifeval::[{mlm-content} == true]
 // Use list format: repository URLs / packages and metadata / version info
 [IMPORTANT]
 ====
-* {ubuntu} 20.04, 22.04 and 24.04 repository URLs are available from {scclongform}
-* Packages and metadata are provided by Ubuntu, not by {suse}
-* For supported products, see the support table and the release notes
+* {ubuntu} repository URLs are available from {scclongform}.
+* Packages and metadata are provided by Ubuntu, not by {suse}.
+* For supported products, see the release notes and the support table at xref:client-configuration:supported-features-ubuntu.adoc[].
 ====
 endif::[]
 
