--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -114,7 +114,7 @@ endif::[]
 *** xref:registration-overview-rocky.adoc[Rocky Linux Client Registration]
 **** xref:clients-rocky.adoc[Rocky Linux Clients]
 *** xref:registration-overview-ubuntu.adoc[Ubuntu Client Registration]
-**** xref:clients-ubuntu.adoc[Ubuntu 20.04, 22.04 and 24.04 Clients]
+**** xref:clients-ubuntu.adoc[Ubuntu Clients]
 *** xref:client-proxy.adoc[Client Registration to a Proxy]
 **** xref:client-proxy-webui.adoc[Register to a Proxy With the Web UI]
 **** xref:client-proxy-cli.adoc[Register to a Proxy With CLI]
