Clearer pointer to supported 3rd party features - Debian.

--- a/modules/client-configuration/pages/clients-debian.adoc
+++ b/modules/client-configuration/pages/clients-debian.adoc
@@ -9,9 +9,9 @@ ifeval::[{mlm-content} == true]
 // Use list format: repository URLs / packages and metadata / version info
 [IMPORTANT]
 ====
-* {debian} repository URLs are available from {scclongform}
-* Packages and metadata are provided by Debian, not by {suse}
-* For supported products, see the support table and the release notes
+* {debian} repository URLs are available from {scclongform}.
+* Packages and metadata are provided by Debian, not by {suse}.
+* For supported products, see the release notes and the support table at xref:client-configuration:supported-features-debian.adoc[].
 ====
 endif::[]
 
