Clearer pointer to supported 3rd party features.

--- a/modules/client-configuration/pages/clients-rocky.adoc
+++ b/modules/client-configuration/pages/clients-rocky.adoc
@@ -7,9 +7,9 @@ ifeval::[{suma-content} == true]
 // Use list format: repository URLs / packages and metadata / version info
 [IMPORTANT]
 ====
-* {rocky} repository URLs are available from {scclongform}
-* Packages and metadata are provided by Rocky Enterprise Software Foundation, not by {suse}
-* For supported products, see the support table and the release notes
+* {rocky} repository URLs are available from {scclongform}.
+* Packages and metadata are provided by Rocky Enterprise Software Foundation, not by {suse}.
+* For supported products, see the release notes and the support table at xref:client-configuration:supported-features-rocky.adoc[].
 ====
 endif::[]
 
