--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -80,7 +80,7 @@ endif::[]
 *** xref:registration-overview-rocky.adoc[Rocky Linux Client Registration]
 **** xref:clients-rocky.adoc[Rocky Linux Clients]
 *** xref:registration-overview-ubuntu.adoc[Ubuntu Client Registration]
-**** xref:clients-ubuntu.adoc[Ubuntu 20.04, 22.04 and 24.04 Clients]
+**** xref:clients-ubuntu.adoc[Ubuntu Clients]
 **** xref:clients-ubuntu-old.adoc[Ubuntu 18.04 Clients]
 *** xref:client-proxy.adoc[Client Registration to a Proxy]
 **** xref:client-proxy-webui.adoc[Register to a Proxy with the Web UI]
