--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -7,10 +7,10 @@ This section contains information about registering {salt} clients running {ubun
 // Use list format: repository URLs / packages and metadata / version info
 [IMPORTANT]
 ====
-* {ubuntu} 20.04, 22.04 and 24.04 repository URLs are available from {scc}
-* Packages and metadata are provided by Ubuntu, not by {suse}
-* For supported products, see the support table and the release notes
+* {ubuntu} repository URLs are available from {scc}.
+* Packages and metadata are provided by Ubuntu, not by {suse}.
 * Canonical does not endorse or support {productname}.
+* For supported products, see the release notes and the support table at xref:client-configuration:supported-features-ubuntu.adoc[].
 ====
 
 [NOTE]
