--- a/modules/client-configuration/pages/clients-almalinux.adoc
+++ b/modules/client-configuration/pages/clients-almalinux.adoc
@@ -7,9 +7,9 @@ ifeval::[{suma-content} == true]
 // Use list format: repository URLs / packages and metadata / version info
 [IMPORTANT]
 ====
-* {almalinux} repository URLs are available from {scc}
-* Packages and metadata are provided by AlmaLinux OS Foundation, not by {suse}
-* For supported products, see the support table and the release notes
+* {almalinux} repository URLs are available from {scc}.
+* Packages and metadata are provided by AlmaLinux OS Foundation, not by {suse}.
+* For supported products, see the release notes and the support table at xref:client-configuration:supported-features-almalinux.adoc[].
 ====
 endif::[]
 
