--- a/modules/client-configuration/pages/clients-debian.adoc
+++ b/modules/client-configuration/pages/clients-debian.adoc
@@ -12,9 +12,9 @@ ifeval::[{suma-content} == true]
 // Use list format: repository URLs / packages and metadata / version info
 [IMPORTANT]
 ====
-* {debian} repository URLs are available from {scc}
-* Packages and metadata are provided by Debian, not by {suse}
-* For supported products, see the support table and the release notes
+* {debian} repository URLs are available from {scc}.
+* Packages and metadata are provided by Debian, not by {suse}.
+* For supported products, see the release notes and the support table at xref:client-configuration:supported-features-debian.adoc[].
 ====
 endif::[]
 
