--- a/modules/client-configuration/pages/clients-oracle.adoc
+++ b/modules/client-configuration/pages/clients-oracle.adoc
@@ -7,10 +7,10 @@ ifeval::[{suma-content} == true]
 // Use list format: repository URLs / packages and metadata / version info
 [IMPORTANT]
 ====
-* {oracle} repository URLs are available from {scc}
-* Packages and metadata are provided by Oracle, not by {suse}
-* {oracle} base media repositories are freely available for download from https://yum.oracle.com/
-* For supported products, see the support table and the release notes
+* {oracle} repository URLs are available from {scc}.
+* Packages and metadata are provided by Oracle, not by {suse}.
+* {oracle} base media repositories are freely available for download from https://yum.oracle.com/.
+* For supported products, see the release notes and the support table at xref:client-configuration:supported-features-oracle.adoc[].
 ====
 endif::[]
 
