mention version number only where needed.

--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -1,13 +1,13 @@
 [[clients-ubuntu]]
 = Registering {ubuntu} 22.04 and 24.04 Clients
 
-This section contains information about registering clients running {ubuntu} 22.04 LTS and 24.04 LTS operating systems.
+This section contains information about registering clients running {ubuntu} operating systems.
 
 ifeval::[{mlm-content} == true]
 // Use list format: repository URLs / packages and metadata / version info
 [IMPORTANT]
 ====
-* {ubuntu} 22.04 and 24.04 repository URLs are available from {scclongform}
+* {ubuntu} repository URLs are available from {scclongform}
 * Packages and metadata are provided by Ubuntu, not by {suse}
 * For supported products, see the support table and the release notes
 ====
@@ -100,7 +100,7 @@ These repositories can also be synchronized within {productname} if you extract 
 
 === Extract GPG keys and Bearer Token
 
-Register an Ubuntu host with Ubuntu Pro. 
+Register an Ubuntu host with Ubuntu Pro.
 You will find your personal registration token in the https://ubuntu.com/pro/dashboard[Ubuntu Pro Dashbaord].
 An https://login.ubuntu.com/[Ubuntu One acconut] is required for this.
 
