Removed Ubuntu 20.04 from the list of supported clients (#3774)
* https://github.com/SUSE/spacewalk/issues/26604
* https://bugzilla.suse.com/show_activity.cgi?id=1238481

--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -1,20 +1,21 @@
 [[clients-ubuntu]]
-= Registering {ubuntu} 20.04, 22.04 and 24.04 Clients
+= Registering {ubuntu} Clients
 
-This section contains information about registering clients running {ubuntu} 20.04 LTS, 22.04 LTS and 24.04 LTS operating systems.
+This section contains information about registering clients running {ubuntu} operating systems.
 
 ifeval::[{suma-content} == true]
 // Use list format: repository URLs / packages and metadata / version info
 [IMPORTANT]
 ====
-* {ubuntu} 20.04, 22.04 and 24.04 repository URLs are available from {scclongform}
+* {ubuntu} repository URLs are available from {scclongform}
 * Packages and metadata are provided by Ubuntu, not by {suse}
 * For supported products, see the support table and the release notes
 ====
 endif::[]
 
+
 ifeval::[{suma-content} == true]
-{productname} supports {ubuntu} 20.04 LTS, 22.04 LTS and 24.04 LTS clients using {salt}.
+{productname} supports {ubuntu} 22.04 LTS and 24.04 LTS clients using {salt}.
 endif::[]
 
 Bootstrapping is supported for starting {ubuntu} clients and performing initial state runs such as setting repositories and performing profile updates.
@@ -43,7 +44,6 @@ The products you need for this procedure are:
 | OS Version     | Product Name
 | {ubuntu} 24.04 | Ubuntu 24.04
 | {ubuntu} 22.04 | Ubuntu 22.04
-| {ubuntu} 20.04 | Ubuntu 20.04
 |===
 
 include::snippets/addchannels_vendor_webui.adoc[]
@@ -59,7 +59,6 @@ The channels you need for this procedure are:
 | OS Version     | Base Channel
 | {ubuntu} 24.04 | ubuntu-2404-amd64-main-amd64
 | {ubuntu} 22.04 | ubuntu-2204-amd64-main-amd64
-| {ubuntu} 20.04 | ubuntu-2004-amd64-main-amd64
 |===
 
 include::snippets/addchannels_vendor_cli.adoc[]
@@ -79,21 +78,6 @@ The channels you need for this procedure are:
 
 | {ubuntu} 24.04 | ubuntu-2404-pool-amd64-uyuni | ubuntu-2404-amd64-main-uyuni | ubuntu-2404-amd64-main-updates-uyuni | ubuntu-2404-amd64-main-security-uyuni | ubuntu-2404-amd64-uyuni-client
 | {ubuntu} 22.04 | ubuntu-2204-pool-amd64-uyuni | ubuntu-2204-amd64-main-uyuni | ubuntu-2204-amd64-main-updates-uyuni | ubuntu-2204-amd64-main-security-uyuni | ubuntu-2204-amd64-uyuni-client
-| {ubuntu} 20.04 | ubuntu-2004-pool-amd64-uyuni | ubuntu-2004-amd64-main-uyuni | ubuntu-2004-amd64-main-updates-uyuni | ubuntu-2004-amd64-main-security-uyuni | ubuntu-2004-amd64-uyuni-client
-|===
-
-Version 20.04 also requires the Universe channels:
-
-[[ubuntu-universe-channels-cli-uyuni]]
-[cols="1,1", options="header"]
-.Ubuntu 20.04 Universe Channels - CLI
-|===
-
-| {ubuntu} 20.04           | {nbsp}
-| Universe Channel         | ubuntu-2004-amd64-universe-uyuni
-| Universe Updates Channel | ubuntu-2004-amd64-universe-updates-uyuni
-| Universe Security Updates Channel | ubuntu-2004-amd64-universe-security-uyuni
-| Universe Backports Channel | ubuntu-2004-amd64-universe-backports-uyuni
 
 |===
 
@@ -109,7 +93,7 @@ endif::[]
 
 == Mirror Ubuntu ESM packages
 
-Canonical provides https://ubuntu.com/security/esm[Expanded Security Maintenance] (**ESM**) packages for https://ubuntu.com/pro[Ubuntu Pro] users and customers. 
+Canonical provides https://ubuntu.com/security/esm[Expanded Security Maintenance] (**ESM**) packages for https://ubuntu.com/pro[Ubuntu Pro] users and customers.
 These packages offer longer maintenance (_10 to 12 years_) for several operating system components and selected applications.
 
 These repositories can also be synchronized within {productname} if you extract the required **GPG keys** and your personal **Bearer Token** from a system registered to Ubuntu Pro.
@@ -117,8 +101,8 @@ These repositories can also be synchronized within {productname} if you extract 
 
 === Extract GPG keys and Bearer Token
 
-Register an Ubuntu host with Ubuntu Pro. 
-You will find your personal registration token in the https://ubuntu.com/pro/dashboard[Ubuntu Pro Dashbaord]. 
+Register an Ubuntu host with Ubuntu Pro.
+You will find your personal registration token in the https://ubuntu.com/pro/dashboard[Ubuntu Pro Dashbaord].
 An https://login.ubuntu.com/[Ubuntu One acconut] is required for this.
 
 ----
@@ -177,7 +161,8 @@ Create the appropriate child channels below already synchronized {ubuntu} parent
 
 [IMPORTANT]
 ====
-The procedure shown here can be used to circumvent the subscription limitations - however, this constitutes a breach of the Terms of Service and may have **legal consequences**. There must always be sufficient subscriptions for the number of systems used.
+The procedure shown here can be used to circumvent the subscription limitations - however, this constitutes a breach of the Terms of Service and may have **legal consequences**.
+There must always be sufficient subscriptions for the number of systems used.
 ====
 
 == Check Synchronization Status
