Removed Ubuntu 20.04 from the list of supported clients (#3774) (#3776)
* https://github.com/SUSE/spacewalk/issues/26604
* https://bugzilla.suse.com/show_activity.cgi?id=1238481

--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -1,13 +1,12 @@
 [[clients-ubuntu]]
-= Registering {ubuntu} 20.04, 22.04 and 24.04 Clients
+= Registering {ubuntu} Clients
 
-
-This section contains information about registering {salt} clients running {ubuntu} 20.04 LTS, 22.04 LTS and 24.04 LTS operating systems.
+This section contains information about registering clients running {ubuntu} operating systems.
 
 // Use list format: repository URLs / packages and metadata / version info
 [IMPORTANT]
 ====
-* {ubuntu} 20.04, 22.04 and 24.04 repository URLs are available from {scc}
+* {ubuntu} repository URLs are available from {scclongform}
 * Packages and metadata are provided by Ubuntu, not by {suse}
 * For supported products, see the support table and the release notes
 * Canonical does not endorse or support {productname}.
@@ -39,9 +38,8 @@ The products you need for this procedure are:
 |===
 
 | OS Version     | Product Name
-| {ubuntu} 20.04 | Ubuntu 20.04
-| {ubuntu} 22.04 | Ubuntu 22.04
 | {ubuntu} 24.04 | Ubuntu 24.04
+| {ubuntu} 22.04 | Ubuntu 22.04
 |===
 
 include::snippets/addchannels_vendor_webui.adoc[]
@@ -55,12 +53,47 @@ The channels you need for this procedure are:
 |===
 
 | OS Version     | Base Channel
-| {ubuntu} 20.04 | ubuntu-2004-amd64-main-amd64
-| {ubuntu} 22.04 | ubuntu-2204-amd64-main-amd64
 | {ubuntu} 24.04 | ubuntu-2404-amd64-main-amd64
+| {ubuntu} 22.04 | ubuntu-2204-amd64-main-amd64
 |===
 
 include::snippets/addchannels_vendor_cli.adoc[]
+
+
+
+
+== Mirror Ubuntu ESM packages
+
+Canonical provides https://ubuntu.com/security/esm[Expanded Security Maintenance] (**ESM**) packages for https://ubuntu.com/pro[Ubuntu Pro] users and customers.
+These packages offer longer maintenance (_10 to 12 years_) for several operating system components and selected applications.
+
+These repositories can also be synchronized within {productname} if you extract the required **GPG keys** and your personal **Bearer Token** from a system registered to Ubuntu Pro.
+
+
+=== Extract GPG keys and Bearer Token
+
+Register an Ubuntu host with Ubuntu Pro.
+You will find your personal registration token in the https://ubuntu.com/pro/dashboard[Ubuntu Pro Dashbaord].
+An https://login.ubuntu.com/[Ubuntu One acconut] is required for this.
+
+----
+sudo apt-get install ubuntu-advantage-tools
+sudo pro attach <perosnal_token>
+----
+
+After registration, you will find the Bearer Token in the file `/etc/apt/auth.conf.d/90ubuntu-advantage`:
+
+----
+machine esm.ubuntu.com/apps/ubuntu/ login bearer password <token>  # ubuntu-pro-client
+machine esm.ubuntu.com/infra/ubuntu/ login bearer password <token>  # ubuntu-pro-client
+----
+
+[NOTE]
+====
+One dedicated bearer token is used per repository.
+====
+
+Configure the following repositories within {productname}:
 
 
 
