--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -87,7 +87,7 @@ The operating system running on a client is supported by the organization that s
 | {check}
 | {check}
 
-| {debian} 12, 11 (*)
+| {debian} 12
 | {x86_64}
 | {cross}
 | {check}
@@ -112,7 +112,7 @@ The operating system running on a client is supported by the organization that s
 | {cross}
 | {check}
 
-| {ubuntu} 24.04, 22.04, 20.04
+| {ubuntu} 24.04, 22.04
 | {amd64}
 | {cross}
 | {check}
