--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -130,7 +130,7 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {check}
 
-| {ubuntu} 24.04, 22.04 (*)
+| {ubuntu} 24.04, 22.04, 20.04 (*)
 | {check}
 | {cross}
 | {cross}
@@ -272,7 +272,7 @@ ifeval::[{uyuni-content} == true]
 | {check}
 | {cross}
 
-| {ubuntu} 24.04, 22.04 (*)
+| {ubuntu} 24.04, 22.04, 20.04 (*)
 | {check}
 | {cross}
 | {cross}
