revert: Uyuni still supports Ubuntu 2020.04

--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -1,5 +1,5 @@
 [[clients-ubuntu]]
-= Registering {ubuntu} 22.04 and 24.04 Clients
+= Registering {ubuntu} Clients
 
 This section contains information about registering clients running {ubuntu} operating systems.
 
@@ -77,6 +77,21 @@ The channels you need for this procedure are:
 
 | {ubuntu} 24.04 | ubuntu-2404-pool-amd64-uyuni | ubuntu-2404-amd64-main-uyuni | ubuntu-2404-amd64-main-updates-uyuni | ubuntu-2404-amd64-main-security-uyuni | ubuntu-2404-amd64-uyuni-client
 | {ubuntu} 22.04 | ubuntu-2204-pool-amd64-uyuni | ubuntu-2204-amd64-main-uyuni | ubuntu-2204-amd64-main-updates-uyuni | ubuntu-2204-amd64-main-security-uyuni | ubuntu-2204-amd64-uyuni-client
+| {ubuntu} 20.04 | ubuntu-2004-pool-amd64-uyuni | ubuntu-2004-amd64-main-uyuni | ubuntu-2004-amd64-main-updates-uyuni | ubuntu-2004-amd64-main-security-uyuni | ubuntu-2004-amd64-uyuni-client
+|===
+
+Version 20.04 also requires the Universe channels:
+
+[[ubuntu-universe-channels-cli-uyuni]]
+[cols="1,1", options="header"]
+.Ubuntu 20.04 Universe Channels - CLI
+|===
+
+| {ubuntu} 20.04           | {nbsp}
+| Universe Channel         | ubuntu-2004-amd64-universe-uyuni
+| Universe Updates Channel | ubuntu-2004-amd64-universe-updates-uyuni
+| Universe Security Updates Channel | ubuntu-2004-amd64-universe-security-uyuni
+| Universe Backports Channel | ubuntu-2004-amd64-universe-backports-uyuni
 
 |===
 
@@ -160,8 +175,7 @@ Create the appropriate child channels below already synchronized {ubuntu} parent
 
 [IMPORTANT]
 ====
-The procedure shown here can be used to circumvent the subscription limitations - however, this constitutes a breach of the Terms of Service and may have **legal consequences**.
-There must always be sufficient subscriptions for the number of systems used.
+The procedure shown here can be used to circumvent the subscription limitations - however, this constitutes a breach of the Terms of Service and may have **legal consequences**. There must always be sufficient subscriptions for the number of systems used.
 ====
 
 == Check Synchronization Status
