Additional changes following the new workflow addition.

--- a/modules/common-workflows/nav-common-workflows-guide.adoc
+++ b/modules/common-workflows/nav-common-workflows-guide.adoc
@@ -19,6 +19,8 @@ endif::[]
 
 ** xref:workflow-product-upgrade-webui.adoc[Product Upgrade via {webui}]
 
+** xref:workflow-install-from-selfinstall-on-ppc.adoc[Installing {productname} on {ppc64le}]
+
 ifdef::backend-pdf[]
 include::modules/ROOT/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
 endif::[]
