--- a/modules/common-workflows/nav-common-workflows-guide.adoc
+++ b/modules/common-workflows/nav-common-workflows-guide.adoc
@@ -17,6 +17,8 @@ ifeval::[{suma-content} == true]
 ** xref:workflow-install-from-raw-image.adoc[Installation Using RAW Image]
 endif::[]
 
+** xref:workflow-install-from-selfinstall-on-ppc.adoc[Installing {productname} on {ppc64le}]
+
 ** xref:workflow-product-upgrade-webui.adoc[Product Upgrade via {webui}]
 
 ifdef::backend-pdf[]
