Add instructions about Proxy installation SLES 15 SP6

--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -41,7 +41,7 @@ ifeval::[{suma-content} == true]
 **** xref:container-deployment/suma/server-air-gapped-deployment-suma.adoc[Air-gapped Deployment]
 **** xref:install-pubcloud.adoc[Public Cloud Deployment]
 *** xref:install-proxy.adoc[Proxy]
-**** xref:container-deployment/suma/proxy-deployment-suma.adoc[{productname} Proxy Deployment on {sle-micro}]
+**** xref:container-deployment/suma/proxy-deployment-suma.adoc[{productname} Proxy Deployment]
 **** xref:container-deployment/suma/proxy-deployment-vm-suma.adoc[Proxy Deployment as Virtual Machine - KVM]
 **** xref:container-deployment/suma/proxy-deployment-vmdk-suma.adoc[Proxy Deployment Virtual Machine - VMware]
 **** xref:container-deployment/suma/proxy-k3s-deployment-suma.adoc[Proxy Deployment on K3s]
