--- a/modules/administration/pages/custom-channels.adoc
+++ b/modules/administration/pages/custom-channels.adoc
@@ -108,7 +108,7 @@ The key would also persist if the chroot environment would be cleaned.
 . The gpg command to import a key into the pub keyring is:
 +
 ----
-gpg --keyring /var/lib/spacewalk/gpgdir  --import /path/to/gpg.key
+gpg --homedir /var/lib/spacewalk/gpgdir --import /path/to/gpg.key
 gpg --edit-key <keyid>
 ----
 
