add client-proxy-script to nav again

--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -118,6 +118,7 @@ endif::[]
 *** xref:client-proxy.adoc[Client Registration to a Proxy]
 **** xref:client-proxy-webui.adoc[Register to a Proxy With the Web UI]
 **** xref:client-proxy-cli.adoc[Register to a Proxy With CLI]
+**** xref:client-proxy-script.adoc[Register to a Proxy With a Script]
 *** xref:clients-pubcloud.adoc[Public Cloud Clients]
 **** xref:automatic-client-registration.adoc[Automatic Registration of Clients Created by Terraform]
 ** xref:client-upgrades.adoc[Client Upgrades]
