--- a/modules/client-configuration/pages/client-proxy-script.adoc
+++ b/modules/client-configuration/pages/client-proxy-script.adoc
@@ -49,9 +49,23 @@ If needed, use the additional command line switches to tune your bootstrap scrip
 .. OPTIONAL: Edit the resulting bootstrap script.
 --
 
-. Execute the bootstrap script directly on the clients or from the proxy with [command]``ssh``.
-  Replace [systemitem]``<bootstrap>`` with the name of the bootstrap script and [systemitem]`` <client.example.com>`` with the host name of your client:
+. Execute the bootstrap script.
+  There are two options:
+
 +
+
+* Transfer it to the client and run it directly on the clients.
+
++
+
+// FIXME: or from the proxy???
+
+* Execute it from the server with [command]``ssh``.
+  Replace [systemitem]``<bootstrap>`` with the name of the bootstrap script and [systemitem]`` <client.example.com>`` with the host name of the client:
+
++
+
+[source,shell]
 ----
 cat <bootstrap> | ssh root@<client.example.com> /bin/bash
 ----
